add reset method in Metrics

--- a/labs.ipynb
+++ b/labs.ipynb
@@ -9,9 +9,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 'EGLD'), 100, <system.env.Env object at 0x000001BB6CF27990>]\n",
+      "__ Start Session 1____________\n",
+      "{'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 70.61317833763712, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "__ End Session 1 ____________\n",
+      "__ Start Session 2____________\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 55\u001b[0m\n\u001b[0;32m     53\u001b[0m agent \u001b[38;5;241m=\u001b[39m Agent(\u001b[38;5;241m*\u001b[39magent_x)\n\u001b[0;32m     54\u001b[0m agent\u001b[38;5;241m.\u001b[39mupdate_policy(\u001b[38;5;241m*\u001b[39mstrategie)\n\u001b[1;32m---> 55\u001b[0m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_episode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     56\u001b[0m AGENT\u001b[38;5;241m.\u001b[39mappend(agent)\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\agent.py:80\u001b[0m, in \u001b[0;36mAgent.run_episode\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     78\u001b[0m     event, next_state, reward, event, signalAction, riskAction \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecute(state)\n\u001b[0;32m     79\u001b[0m     state \u001b[38;5;241m=\u001b[39m next_state\n\u001b[1;32m---> 80\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfollow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mevent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mevent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignal\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msignalAction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     81\u001b[0m     i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\agent.py:67\u001b[0m, in \u001b[0;36mAgent.follow\u001b[1;34m(self, event, signal)\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfollowing\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magentId)\n\u001b[0;32m     66\u001b[0m     tradeData \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfollowing\u001b[38;5;241m.\u001b[39mtradeData\n\u001b[1;32m---> 67\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mactuator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtradeData\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpost_event\u001b[38;5;241m.\u001b[39madd_session(event\u001b[38;5;241m.\u001b[39mdate, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magentId[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msession\u001b[38;5;241m.\u001b[39mn_session)\n\u001b[0;32m     69\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\session_manager.py:35\u001b[0m, in \u001b[0;36mSessionManager.actuator\u001b[1;34m(self, tradedata)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreport()\n\u001b[1;32m---> 35\u001b[0m     m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_session_metrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28mprint\u001b[39m(m)\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mupdate_risk_session_params()\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\session_manager.py:19\u001b[0m, in \u001b[0;36mSessionManager.get_session_metrics\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_session_metrics\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmetrics\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\retrocation\\metrics.py:89\u001b[0m, in \u001b[0;36mAMetric.calculate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalculate\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 89\u001b[0m     winRate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwto\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwinrate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     90\u001b[0m     lossRate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwto\u001b[38;5;241m.\u001b[39mlossrate()\n\u001b[0;32m     91\u001b[0m     amountWin \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwto\u001b[38;5;241m.\u001b[39mtotalwin()\n",
+      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\retrocation\\metrics.py:18\u001b[0m, in \u001b[0;36mWTO.winrate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwinrate\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnb\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "from system.agent import Agent\n",
     "from system.env import Env, GEnv\n",
@@ -63,12 +92,13 @@
     "\n",
     "AGENT = []\n",
     "for agent_x, strategie in zip(AGENT_PARAMS, STRATEGIES):\n",
+    "    clear_output()\n",
     "    print(agent_x)\n",
     "    agent = Agent(*agent_x)\n",
     "    agent.update_policy(*strategie)\n",
     "    agent.run_episode()\n",
     "    AGENT.append(agent)\n",
-    "    clear_output()\n",
+    "    \n",
     "    "
    ]
   },
