mis a jour de Transition : Prise en compte de get_out_session()

--- a/labs.ipynb
+++ b/labs.ipynb
@@ -9,35 +9,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4, 'EGLD'), 100, <system.env.Env object at 0x000001BB6CF27990>]\n",
+      "[(4, 'EGLD'), 100, <system.env.Env object at 0x0000024C0D781550>]\n",
       "__ Start Session 1____________\n",
-      "{'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 70.61317833763712, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "{'nbTrades': 2, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 46.92497725668751, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
       "__ End Session 1 ____________\n",
-      "__ Start Session 2____________\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 55\u001b[0m\n\u001b[0;32m     53\u001b[0m agent \u001b[38;5;241m=\u001b[39m Agent(\u001b[38;5;241m*\u001b[39magent_x)\n\u001b[0;32m     54\u001b[0m agent\u001b[38;5;241m.\u001b[39mupdate_policy(\u001b[38;5;241m*\u001b[39mstrategie)\n\u001b[1;32m---> 55\u001b[0m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_episode\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     56\u001b[0m AGENT\u001b[38;5;241m.\u001b[39mappend(agent)\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\agent.py:80\u001b[0m, in \u001b[0;36mAgent.run_episode\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     78\u001b[0m     event, next_state, reward, event, signalAction, riskAction \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecute(state)\n\u001b[0;32m     79\u001b[0m     state \u001b[38;5;241m=\u001b[39m next_state\n\u001b[1;32m---> 80\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfollow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mevent\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mevent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignal\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msignalAction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     81\u001b[0m     i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     82\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\agent.py:67\u001b[0m, in \u001b[0;36mAgent.follow\u001b[1;34m(self, event, signal)\u001b[0m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfollowing\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magentId)\n\u001b[0;32m     66\u001b[0m     tradeData \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfollowing\u001b[38;5;241m.\u001b[39mtradeData\n\u001b[1;32m---> 67\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msession\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mactuator\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtradeData\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpost_event\u001b[38;5;241m.\u001b[39madd_session(event\u001b[38;5;241m.\u001b[39mdate, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39magentId[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msession\u001b[38;5;241m.\u001b[39mn_session)\n\u001b[0;32m     69\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\session_manager.py:35\u001b[0m, in \u001b[0;36mSessionManager.actuator\u001b[1;34m(self, tradedata)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreport()\n\u001b[1;32m---> 35\u001b[0m     m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_session_metrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28mprint\u001b[39m(m)\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mupdate_risk_session_params()\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\session_manager.py:19\u001b[0m, in \u001b[0;36mSessionManager.get_session_metrics\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_session_metrics\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmetrics\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\retrocation\\metrics.py:89\u001b[0m, in \u001b[0;36mAMetric.calculate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalculate\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 89\u001b[0m     winRate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwto\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwinrate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     90\u001b[0m     lossRate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwto\u001b[38;5;241m.\u001b[39mlossrate()\n\u001b[0;32m     91\u001b[0m     amountWin \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwto\u001b[38;5;241m.\u001b[39mtotalwin()\n",
-      "File \u001b[1;32mc:\\Users\\Dell\\Desktop\\CedAlgo\\C-Syst\\system\\retrocation\\metrics.py:18\u001b[0m, in \u001b[0;36mWTO.winrate\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwinrate\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnb\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+      "__ Start Session 2____________\n",
+      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 23.68820108094961, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "__ End Session 2 ____________\n",
+      "__ Start Session 3____________\n",
+      "{'nbTrades': 2, 'winRate': 0.0, 'lossRate': -1.0, 'amountWin': 0, 'amountLoss': -117.0939567929577, 'expectancy': nan, 'profitFactor': 0.0}\n",
+      "__ End Session 3 ____________\n",
+      "__ Start Session 4____________\n",
+      "{'nbTrades': 3, 'winRate': 0.6666666666666666, 'lossRate': -0.3333333333333333, 'amountWin': 11.47991387834923, 'amountLoss': -4.375903483598627, 'expectancy': 5.285272453982619, 'profitFactor': 2.6234385473485013}\n",
+      "__ End Session 4 ____________\n",
+      "__ Start Session 5____________\n",
+      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 1.6131110970861755, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "__ End Session 5 ____________\n",
+      "__ Start Session 6____________\n",
+      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 14.335145995999895, 'amountLoss': -4.215865247147491, 'expectancy': 9.275505621573693, 'profitFactor': 3.4002856248072066}\n",
+      "__ End Session 6 ____________\n",
+      "__ Start Session 7____________\n",
+      "{'nbTrades': 2, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 15.489369805623454, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "__ End Session 7 ____________\n",
+      "__ Start Session 8____________\n",
+      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 5.632273087460092, 'amountLoss': -6.456650217233687, 'expectancy': 6.0444616523468895, 'profitFactor': 0.8723212343804503}\n",
+      "__ End Session 8 ____________\n",
+      "__ Start Session 9____________\n",
+      "{'nbTrades': 4, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 6.371106988143154, 'amountLoss': -7.662953469607473, 'expectancy': 3.5085151144376567, 'profitFactor': 0.8314166350366091}\n",
+      "__ End Session 9 ____________\n",
+      "__ Start Session 10____________\n",
+      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 7.009886028504809, 'amountLoss': -4.641439704076745, 'expectancy': 5.825662866290777, 'profitFactor': 1.5102826871472166}\n",
+      "__ End Session 10 ____________\n",
+      "__ Start Session 11____________\n"
      ]
     }
    ],
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +232,7 @@
        "[595 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
