--- a/labs.ipynb
+++ b/labs.ipynb
@@ -9,45 +9,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(4, 'EGLD'), 100, <system.env.Env object at 0x0000024C0D781550>]\n",
+      "[(4, 'EGLD'), 100, <system.env.Env object at 0x00000242B0C2A390>]\n",
       "__ Start Session 1____________\n",
-      "{'nbTrades': 2, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 46.92497725668751, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "{'nbTrades': 2, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 46.92497725668751, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf, 'minExposure': 11, 'maxExposure': 17}\n",
       "__ End Session 1 ____________\n",
       "__ Start Session 2____________\n",
-      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 23.68820108094961, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 23.68820108094961, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf, 'minExposure': 19, 'maxExposure': 19}\n",
       "__ End Session 2 ____________\n",
       "__ Start Session 3____________\n",
-      "{'nbTrades': 2, 'winRate': 0.0, 'lossRate': -1.0, 'amountWin': 0, 'amountLoss': -117.0939567929577, 'expectancy': nan, 'profitFactor': 0.0}\n",
+      "{'nbTrades': 2, 'winRate': 0.0, 'lossRate': -1.0, 'amountWin': 0, 'amountLoss': -117.0939567929577, 'expectancy': nan, 'profitFactor': 0.0, 'minExposure': 5, 'maxExposure': 73}\n",
       "__ End Session 3 ____________\n",
       "__ Start Session 4____________\n",
-      "{'nbTrades': 3, 'winRate': 0.6666666666666666, 'lossRate': -0.3333333333333333, 'amountWin': 11.47991387834923, 'amountLoss': -4.375903483598627, 'expectancy': 5.285272453982619, 'profitFactor': 2.6234385473485013}\n",
+      "{'nbTrades': 3, 'winRate': 0.6666666666666666, 'lossRate': -0.3333333333333333, 'amountWin': 11.47991387834923, 'amountLoss': -4.375903483598627, 'expectancy': 5.285272453982619, 'profitFactor': 2.6234385473485013, 'minExposure': 3, 'maxExposure': 16}\n",
       "__ End Session 4 ____________\n",
       "__ Start Session 5____________\n",
-      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 1.6131110970861755, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 1.6131110970861755, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf, 'minExposure': 39, 'maxExposure': 39}\n",
       "__ End Session 5 ____________\n",
       "__ Start Session 6____________\n",
-      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 14.335145995999895, 'amountLoss': -4.215865247147491, 'expectancy': 9.275505621573693, 'profitFactor': 3.4002856248072066}\n",
+      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 14.335145995999895, 'amountLoss': -4.215865247147491, 'expectancy': 9.275505621573693, 'profitFactor': 3.4002856248072066, 'minExposure': 26, 'maxExposure': 31}\n",
       "__ End Session 6 ____________\n",
       "__ Start Session 7____________\n",
-      "{'nbTrades': 2, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 15.489369805623454, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf}\n",
+      "{'nbTrades': 2, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 15.489369805623454, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf, 'minExposure': 7, 'maxExposure': 24}\n",
       "__ End Session 7 ____________\n",
       "__ Start Session 8____________\n",
-      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 5.632273087460092, 'amountLoss': -6.456650217233687, 'expectancy': 6.0444616523468895, 'profitFactor': 0.8723212343804503}\n",
+      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 5.632273087460092, 'amountLoss': -6.456650217233687, 'expectancy': 6.0444616523468895, 'profitFactor': 0.8723212343804503, 'minExposure': 13, 'maxExposure': 48}\n",
       "__ End Session 8 ____________\n",
       "__ Start Session 9____________\n",
-      "{'nbTrades': 4, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 6.371106988143154, 'amountLoss': -7.662953469607473, 'expectancy': 3.5085151144376567, 'profitFactor': 0.8314166350366091}\n",
+      "{'nbTrades': 4, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 6.371106988143154, 'amountLoss': -7.662953469607473, 'expectancy': 3.5085151144376567, 'profitFactor': 0.8314166350366091, 'minExposure': 3, 'maxExposure': 14}\n",
       "__ End Session 9 ____________\n",
       "__ Start Session 10____________\n",
-      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 7.009886028504809, 'amountLoss': -4.641439704076745, 'expectancy': 5.825662866290777, 'profitFactor': 1.5102826871472166}\n",
+      "{'nbTrades': 2, 'winRate': 0.5, 'lossRate': -0.5, 'amountWin': 7.009886028504809, 'amountLoss': -4.641439704076745, 'expectancy': 5.825662866290777, 'profitFactor': 1.5102826871472166, 'minExposure': 20, 'maxExposure': 29}\n",
       "__ End Session 10 ____________\n",
-      "__ Start Session 11____________\n"
+      "__ Start Session 11____________\n",
+      "{'nbTrades': 1, 'winRate': 1.0, 'lossRate': 0.0, 'amountWin': 4.550104256154157, 'amountLoss': 0, 'expectancy': nan, 'profitFactor': -inf, 'minExposure': 22, 'maxExposure': 22}\n",
+      "__ End Session 11 ____________\n",
+      "__ Start Session 12____________\n"
      ]
     }
    ],
@@ -114,131 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>agentId</th>\n",
-       "      <th>session</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-02-15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-02-16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-02-17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-02-18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>590</th>\n",
-       "      <td>2023-09-27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>591</th>\n",
-       "      <td>2023-09-28</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>592</th>\n",
-       "      <td>2023-09-29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>593</th>\n",
-       "      <td>2023-09-30</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>594</th>\n",
-       "      <td>2023-10-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>595 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          date  agentId  session\n",
-       "0   2022-02-14        1        1\n",
-       "1   2022-02-15        1        1\n",
-       "2   2022-02-16        1        1\n",
-       "3   2022-02-17        1        1\n",
-       "4   2022-02-18        1        1\n",
-       "..         ...      ...      ...\n",
-       "590 2023-09-27        1       12\n",
-       "591 2023-09-28        1       12\n",
-       "592 2023-09-29        1       12\n",
-       "593 2023-09-30        1       12\n",
-       "594 2023-10-01        1       12\n",
-       "\n",
-       "[595 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "AGENT[0].post_event.data"
+    "r = [4, 5, 6, 1]\n",
+    "min(r)"
    ]
   },
   {
@@ -256,7 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AGENT[1].env.post_event.tradeData"
+    "#AGENT[1].env.post_event.tradeData[AGENT[1].env.post_event.tradeData[\"session\"]==1]\n",
+    "AGENT[1].env.post_event.tradeData.iloc[:53]"
    ]
   },
   {
