--- a/labs.ipynb
+++ b/labs.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "[(1, 'QNT'), 1000, <system.env.Env object at 0x00000138162DE650>, 100]\n",
+      "[(1, 'QNT'), 1000, <system.env.Env object at 0x00000138163C6ED0>, 100]\n",
       "except :  \n",
       "N : 0\n"
      ]
