--- a/labs.ipynb
+++ b/labs.ipynb
@@ -137,16 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "[(1, 'QNT'), 1000, <system.env.Env object at 0x000001BAB234F210>, 100]\n",
+      "[(1, 'QNT'), 1000, <system.env.Env object at 0x000001383F887E50>, 100]\n",
       "{'date': Timestamp('2023-04-09 00:00:00'), 'nbTrades': 8, 'winRate': 0.25, 'lossRate': -0.75, 'amountWin': 99.90304555826776, 'amountLoss': -202.32851376158192, 'totalAmount': -102.42546820331415, 'amount': -102.42546820331415, 'expectancy': -12.80318352541427, 'profitFactor': 0.4937665171404888, 'minExposure': 3, 'maxExposure': 15}\n",
       "__ End Session 0 ____________\n",
       "__ Start Session 1____________\n",
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -13504,9 +13502,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Capital: 1000\n",
+      "Agent Capital: 1382.5477797143826\n",
+      "Portfolio Capital: 1382.5477797143835\n",
+      "PnL: 382.5477797143826\n",
+      "Min exposure : 3  Max exposure : 15\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -13528,107 +13537,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
        "      <th>nbTrades</th>\n",
        "      <th>winRate</th>\n",
        "      <th>lossRate</th>\n",
-       "      <th>amountWin</th>\n",
-       "      <th>amountLoss</th>\n",
-       "      <th>totalAmount</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>expectancy</th>\n",
        "      <th>profitFactor</th>\n",
-       "      <th>minExposure</th>\n",
-       "      <th>maxExposure</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2023-04-09</td>\n",
        "      <td>8</td>\n",
        "      <td>0.250000</td>\n",
        "      <td>-0.750000</td>\n",
-       "      <td>99.903046</td>\n",
-       "      <td>-202.328514</td>\n",
-       "      <td>-102.425468</td>\n",
-       "      <td>-102.425468</td>\n",
-       "      <td>-12.803184</td>\n",
        "      <td>0.493767</td>\n",
-       "      <td>3</td>\n",
-       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023-07-19</td>\n",
        "      <td>19</td>\n",
        "      <td>0.421053</td>\n",
        "      <td>-0.578947</td>\n",
-       "      <td>287.806013</td>\n",
-       "      <td>-162.052757</td>\n",
-       "      <td>125.753256</td>\n",
-       "      <td>23.327788</td>\n",
-       "      <td>6.618592</td>\n",
        "      <td>1.776002</td>\n",
-       "      <td>3</td>\n",
-       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023-10-28</td>\n",
        "      <td>19</td>\n",
        "      <td>0.263158</td>\n",
        "      <td>-0.736842</td>\n",
-       "      <td>237.627791</td>\n",
-       "      <td>-214.288129</td>\n",
-       "      <td>23.339662</td>\n",
-       "      <td>46.667450</td>\n",
-       "      <td>1.228403</td>\n",
        "      <td>1.108917</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-02-06</td>\n",
        "      <td>20</td>\n",
        "      <td>0.450000</td>\n",
        "      <td>-0.550000</td>\n",
-       "      <td>535.740001</td>\n",
-       "      <td>-457.461646</td>\n",
-       "      <td>78.278355</td>\n",
-       "      <td>124.945804</td>\n",
-       "      <td>3.913918</td>\n",
        "      <td>1.171115</td>\n",
-       "      <td>3</td>\n",
-       "      <td>12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        date  nbTrades   winRate  lossRate   amountWin  amountLoss  \\\n",
-       "0 2023-04-09         8  0.250000 -0.750000   99.903046 -202.328514   \n",
-       "1 2023-07-19        19  0.421053 -0.578947  287.806013 -162.052757   \n",
-       "2 2023-10-28        19  0.263158 -0.736842  237.627791 -214.288129   \n",
-       "3 2024-02-06        20  0.450000 -0.550000  535.740001 -457.461646   \n",
-       "\n",
-       "   totalAmount      amount  expectancy  profitFactor  minExposure  maxExposure  \n",
-       "0  -102.425468 -102.425468  -12.803184      0.493767            3           15  \n",
-       "1   125.753256   23.327788    6.618592      1.776002            3           13  \n",
-       "2    23.339662   46.667450    1.228403      1.108917            3           10  \n",
-       "3    78.278355  124.945804    3.913918      1.171115            3           12  "
+       "   nbTrades   winRate  lossRate  profitFactor\n",
+       "0         8  0.250000 -0.750000      0.493767\n",
+       "1        19  0.421053 -0.578947      1.776002\n",
+       "2        19  0.263158 -0.736842      1.108917\n",
+       "3        20  0.450000 -0.550000      1.171115"
       ]
      },
-     "execution_count": 7,
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "AGENT[0].get_report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "session = AGENT[0].post_event.sessionData\n",
-    "session"
+    "session[\"maxExposure\"].max()"
    ]
   },
   {
@@ -13636,27 +13618,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m (session[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnbTrades\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39msum() \u001b[38;5;241m/\u001b[39m \u001b[43mdd\u001b[49m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dd' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "(session[\"nbTrades\"].sum() / dd.shape[0]) * 100"
+    "pp = AGENT[0].env.post_event.portfolioData\n",
+    "pp.head()"
    ]
   },
   {
