--- a/labs.ipynb
+++ b/labs.ipynb
@@ -2,53 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start Date: 2024-04-28 04:37:02.664610\n",
-      "End Date: 2024-05-28 04:37:02.698089\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Set the start date to 30 days before today\n",
-    "start_date = pd.to_datetime('today') - pd.DateOffset(days=30)\n",
-    "\n",
-    "# Set the end date to today\n",
-    "end_date = pd.to_datetime('today')\n",
-    "\n",
-    "print(\"Start Date:\", start_date)\n",
-    "print(\"End Date:\", end_date)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<DateOffset: days=30>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DateOffset(days=30)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -61,18 +14,28 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Get the current timestamp\n",
-    "current_timestamp = pd.Timestamp('now')\n",
-    "\n",
-    "# Calculate the timestamp for 30 days ago\n",
-    "timestamp_30_days_ago = current_timestamp - pd.DateOffset(days=30)\n",
-    "\n",
-    "print(\"Current Timestamp:\", current_timestamp)\n",
-    "print(\"Timestamp 30 Days Ago:\", timestamp_30_days_ago)\n"
+    "### Étape 4: Initialiser la base de données"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**app.py**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
